--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         <div class="container">
           <div class="left-column">
             <div class="categories-item material">
-              <h3>материалы</h3><a href="">на любой вкус</a>
+              <h3>материалы</h3><a class="btn" href="">на любой вкус</a>
             </div>
             <div class="categories-item tool">
-              <h3>инструмент</h3><a href="">на все случаи</a>
+              <h3>инструмент</h3><a class="btn" href="">на все случаи</a>
             </div>
             <div class="categories-item slider">
-              <div class="slider-item perf">
+              <div class="slider-item perf active">
                 <h3>Перфораторы</h3>
                 <p>Настоящие мужские игрушки</p><a class="btn" href="catalog.html">Открыть каталог</a>
               </div>
@@ -89,13 +89,13 @@
           </div>
           <div class="right-column">
             <div class="categories-item technic">
-              <h3>техника</h3><a href="">для стройки</a>
+              <h3>техника</h3><a class="btn" href="">для стройки</a>
             </div>
             <div class="categories-item sale">
-              <h3>скидка 50%</h3><a href="">на 350 товаров</a>
+              <h3>скидка 50%</h3><a class="btn" href="">на 350 товаров</a>
             </div>
             <div class="categories-item delivery">
-              <h3>доставка</h3><a href="">бесплатно</a>
+              <h3>доставка</h3><a class="btn" href="">бесплатно</a>
             </div>
           </div>
         </div>
@@ -216,8 +216,7 @@
     </main>
     <footer class="page-footer">
       <div class="footer-top-row">
-        <div class="container">
-          <div class="logo-bottom"><a href="index.html" alt="logo" aria-label="main-page"><img src="img/logo-technomart.svg" alt="logo"></a></div>
+        <div class="container"><a class="logo-bottom" href="index.html" alt="logo" aria-label="main-page"><img src="img/logo-technomart.svg" alt="logo"></a>
           <ul class="footer-nav">
             <li class="footer-nav-item"><a href="">Компания</a></li>
             <li class="footer-nav-item"><a href="">Новости</a></li>
