finishing_flex_finally

--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
                 <button class="dot active" type="button"></button>
                 <button class="dot" type="button"></button>
               </div>
-              <button class="prev" type="button"></button>
-              <button class="next" type="button"></button>
+              <div class="controls-nav">
+                <button class="prev" type="button"></button>
+                <button class="next" type="button"></button>
+              </div>
             </div>
           </div>
           <div class="right-column">
@@ -130,7 +132,8 @@
               <s class="old-price">30500 Р.</s>
               <p class="price">25500 Р.</p>
             </div>
-            <div class="goods-item"><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
+            <div class="goods-item">
+              <div class="flag-item"></div><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
               <div class="hidden"><a href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
@@ -216,7 +219,8 @@
     </main>
     <footer class="page-footer">
       <div class="footer-top-row">
-        <div class="container"><a class="logo-bottom" href="index.html" alt="logo" aria-label="main-page"><img src="img/logo-technomart.svg" alt="logo"></a>
+        <div class="container">
+          <div class="logo-bottom"><img src="img/logo-technomart.svg" alt="logo"></div>
           <ul class="footer-nav">
             <li class="footer-nav-item"><a href="">Компания</a></li>
             <li class="footer-nav-item"><a href="">Новости</a></li>
