--- a/catalog.html
+++ b/catalog.html
@@ -13,8 +13,12 @@
           <div class="logo-top"><a href="index.html"><img src="img/logo-technomart.svg" alt="logo"></a></div>
           <div class="search">
             <form action="search.html" method="get">
-              <label class="search-icon" for="search"></label>
               <input type="text" id="search" placeholder="Поиск:">
+              <label class="search-icon" for="search">
+                <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+                  <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"></path>
+                </svg>
+              </label>
             </form>
           </div>
           <div class="bookmarks">
@@ -37,15 +41,16 @@
             </div>
             <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-          <div class="authorization"><a class="customer">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
-                <path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"></path>
-              </svg></a>
-            <p class="user">Равшан Джамшутович</p><a class="logout" href="">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
-                <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"></path>
-                <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"></path>
-              </svg></a>
+          <div class="authorization">
+            <div class="user-login"><a class="customer">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
+                  <path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"></path>
+                </svg>
+                <p class="user">Равшан Джамшутович</p><a class="logout" href="">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
+                    <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"></path>
+                    <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"></path>
+                  </svg></a></a></div>
             <ul class="personal">
               <li class="personal-item"><a href="">Мои Заказы</a></li>
               <li class="personal-item"><a href="">Личный кабинет</a></li>
@@ -68,22 +73,30 @@
     <main class="page-content">
       <div class="container">
         <ul class="breadcrumbs">
-          <li class="breadcrumbs-item home"><a href="index.html"></a></li>
-          <li class="breadcrumbs-item"><a href="">Каталог</a></li>
-          <li class="breadcrumbs-item"><a href="">Инструмент</a></li>
-          <li class="breadcrumbs-item"><a class="current">Перфораторы</a></li>
+          <li class="breadcrumbs-item"><a class="breadcrumbs-item-link home" href="index.html"></a></li>
+          <li class="breadcrumbs-item"><a class="breadcrumbs-item-link" href="">Каталог</a></li>
+          <li class="breadcrumbs-item"><a class="breadcrumbs-item-link" href="">Инструмент</a></li>
+          <li class="breadcrumbs-item"><a class="breadcrumbs-item-link current">Перфораторы</a></li>
         </ul>
         <h1 class="content-title">Перфораторы</h1>
         <div class="catalog-filter">
           <aside class="aside">
             <p class="filter">фильтр:</p>
             <form action="https://echo.htmlacademy.ru/courses" method="get">
-              <fieldset class="choose-filter-0">
+              <fieldset class="choose-filter-range">
                 <legend>цена:</legend>
-                <div class="choose-price">
-                  <label for="rating"></label>
-                  <input id="rate" name="rate" min="0" max="30000" step="500" value="0">
-                  <input id="rate" name="rate" min="0" max="30000" step="500" value="30000">
+                <div class="range-filter">
+                  <div class="range-controls">
+                    <div class="scale">
+                      <div class="bar"></div>
+                    </div>
+                    <div class="toggle toggle-min"></div>
+                    <div class="toggle toggle-max"></div>
+                  </div>
+                  <div class="price-controls">
+                    <input name="min-price" type="number" value="0">
+                    <input name="max-price" type="number" value="30000">
+                  </div>
                 </div>
               </fieldset>
               <fieldset class="choose-filter">
@@ -137,8 +150,9 @@
                       <path fill="#231F20" d="M5.5 0L0 10h11z"></path>
                     </svg></a></li>
                 <li class="arrow-item"><a class="arrow" href="" aria-label="down">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"></svg>
-                    <path fill="#231F20" d="M5.5 10L0 0h11"></path></a></li>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                      <path fill="#231F20" d="M5.5 10L0 0h11"></path>
+                    </svg></a></li>
               </ul>
             </div>
             <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
@@ -157,7 +171,8 @@
               <s class="old-price">30500 Р.</s>
               <p class="price">25500 Р.</p>
             </div>
-            <div class="goods-item"><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
+            <div class="goods-item">
+              <div class="flag-item"></div><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
               <div class="hidden"><a href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
@@ -172,7 +187,8 @@
               <s class="old-price">22500 Р.</s>
               <p class="price">15500 Р.</p>
             </div>
-            <div class="goods-item"><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
+            <div class="goods-item">
+              <div class="flag-item"></div><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
               <div class="hidden"><a href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
@@ -187,7 +203,8 @@
               <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
               <p class="price">12500 Р.</p>
             </div>
-            <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
+            <div class="goods-item">
+              <div class="flag-item"></div><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
               <div class="hidden"><a href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
@@ -212,10 +229,10 @@
             </div>
             <div class="pager">
               <ul class="pager-list">
-                <li class="pager-item"><a class="current">1</a></li>
-                <li class="pager-item"><a href="">2</a></li>
-                <li class="pager-item"><a href="">3</a></li>
-                <li class="pager-item"><a href="">Следующая</a></li>
+                <li class="pager-item"><a class="pager-item-link current">1</a></li>
+                <li class="pager-item"><a class="pager-item-link" href="">2</a></li>
+                <li class="pager-item"><a class="pager-item-link" href="">3</a></li>
+                <li class="pager-item"><a class="pager-item-link" href="">Следующая</a></li>
               </ul>
             </div>
           </section>
