--- a/catalog.html
+++ b/catalog.html
@@ -21,12 +21,8 @@
               </label>
             </form>
           </div>
-          <div class="bookmarks">
-            <div class="bookmark-icon"></div><a href="">закладки:</a><span>0</span>
-          </div>
-          <div class="cart">
-            <div class="cart-icon"></div><a href="">корзина:</a><span>10</span>
-          </div><a class="order" href="">оформить заказ</a>
+          <div class="bookmarks"><a class="bookmark-icon" href="">закладки:</a><span>0</span></div>
+          <div class="cart"><a class="cart-icon" href="">корзина:</a><span>10</span></div><a class="order" href="">оформить заказ</a>
         </div>
       </div>
       <div class="container">
@@ -46,14 +42,14 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
                   <path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"></path>
                 </svg>
-                <p class="user">Равшан Джамшутович</p><a class="logout" href="">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
-                    <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"></path>
-                    <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"></path>
-                  </svg></a></a></div>
+                <p class="user">Равшан Джамшутович</p></a><a class="logout" href="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
+                  <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"></path>
+                  <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"></path>
+                </svg></a></div>
             <ul class="personal">
-              <li class="personal-item"><a href="">Мои Заказы</a></li>
-              <li class="personal-item"><a href="">Личный кабинет</a></li>
+              <li class="personal-item"><a class="personal-item-link" href="">Мои Заказы</a></li>
+              <li class="personal-item"><a class="personal-item-link" href="">Личный кабинет</a></li>
             </ul>
           </div>
         </div>
@@ -156,7 +152,7 @@
               </ul>
             </div>
             <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
-              <div class="hidden"><a href="">купить</a>
+              <div class="hidden"><a class="buy" href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
@@ -164,7 +160,7 @@
               <p class="price">15500 Р.</p>
             </div>
             <div class="goods-item"><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
-              <div class="hidden"><a href="">купить</a>
+              <div class="hidden"><a class="buy" href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
@@ -173,14 +169,15 @@
             </div>
             <div class="goods-item">
               <div class="flag-item"></div><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
-              <div class="hidden"><a href="">купить</a>
+              <div class="hidden">
+                <div class="flag-item"></div><a class="buy" href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
               <p class="price">12500 Р.</p>
             </div>
             <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
-              <div class="hidden"><a href="">купить</a>
+              <div class="hidden"><a class="buy" href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
@@ -189,7 +186,8 @@
             </div>
             <div class="goods-item">
               <div class="flag-item"></div><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
-              <div class="hidden"><a href="">купить</a>
+              <div class="hidden">
+                <div class="flag-item"></div><a class="buy" href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
@@ -197,7 +195,7 @@
               <p class="price">25500 Р.</p>
             </div>
             <div class="goods-item"><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
-              <div class="hidden"><a href="">купить</a>
+              <div class="hidden"><a class="buy" href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
@@ -205,7 +203,8 @@
             </div>
             <div class="goods-item">
               <div class="flag-item"></div><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
-              <div class="hidden"><a href="">купить</a>
+              <div class="hidden">
+                <div class="flag-item"></div><a class="buy" href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
@@ -213,7 +212,7 @@
               <p class="price">15500 Р.</p>
             </div>
             <div class="goods-item"><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
-              <div class="hidden"><a href="">купить</a>
+              <div class="hidden"><a class="buy" href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
@@ -221,7 +220,7 @@
               <p class="price">25500 Р.</p>
             </div>
             <div class="goods-item"><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
-              <div class="hidden"><a href="">купить</a>
+              <div class="hidden"><a class="buy" href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
@@ -247,7 +246,8 @@
     </main>
     <footer class="page-footer">
       <div class="footer-top-row">
-        <div class="container"><a class="logo-bottom" href="index.html" alt="logo" aria-label="main-page"><img src="img/logo-technomart.svg" alt="logo"></a>
+        <div class="container">
+          <div class="logo-bottom"><img src="img/logo-technomart.svg" alt="logo"></div>
           <ul class="footer-nav">
             <li class="footer-nav-item"><a href="">Компания</a></li>
             <li class="footer-nav-item"><a href="">Новости</a></li>
@@ -256,28 +256,28 @@
             <li class="footer-nav-item"><a href="">Контакты</a></li>
           </ul>
         </div>
-        <div class="footer-middle-row">
-          <div class="container">
-            <p class="footer-address">г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8<a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
-            <ul class="footer-category">
-              <li class="footer-category-item"><a href="">Материалы</a></li>
-              <li class="footer-category-item"><a href="">Техника</a></li>
-              <li class="footer-category-item"><a href="">Инструмент</a></li>
-              <li class="footer-category-item"><a href="">Спецпредложения</a></li>
-            </ul>
-          </div>
+      </div>
+      <div class="footer-middle-row">
+        <div class="container">
+          <p class="footer-address">г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8<a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+          <ul class="footer-category">
+            <li class="footer-category-item"><a href="">Материалы</a></li>
+            <li class="footer-category-item"><a href="">Техника</a></li>
+            <li class="footer-category-item"><a href="">Инструмент</a></li>
+            <li class="footer-category-item"><a href="">Спецпредложения</a></li>
+          </ul>
         </div>
-        <div class="footer-bottom-row">
-          <div class="container">
-            <p class="footer-rights">© 2010-2017 Компания "Техномарт" Все права защищены</p>
-            <section class="socials">
-              <div class="social-item vk"><a href="vk.com" target="_blank" aria-label="vk"></a></div>
-              <div class="social-item facebook"><a href="facebook.com" target="_blank" aria-label="facebook"></a></div>
-              <div class="social-item instagram"><a href="instagram.com" target="_blank" aria-label="instagram"></a></div>
-            </section>
-            <p class="feedback">Обратная связь<a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
-            <p class="developed">Разработано<a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a></p>
-          </div>
+      </div>
+      <div class="footer-bottom-row">
+        <div class="container">
+          <p class="footer-rights">© 2010-2017 Компания "Техномарт" Все права защищены</p>
+          <section class="socials">
+            <div class="social-item vk"><a href="vk.com" target="_blank" aria-label="vk"></a></div>
+            <div class="social-item facebook"><a href="facebook.com" target="_blank" aria-label="facebook"></a></div>
+            <div class="social-item instagram"><a href="instagram.com" target="_blank" aria-label="instagram"></a></div>
+          </section>
+          <p class="feedback">Обратная связь<a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+          <p class="developed">Разработано<a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a></p>
         </div>
       </div>
     </footer>
