--- a/index.html
+++ b/index.html
@@ -21,12 +21,8 @@
               </label>
             </form>
           </div>
-          <div class="bookmarks">
-            <div class="bookmark-icon"></div><a href="">закладки:</a><span>0</span>
-          </div>
-          <div class="cart">
-            <div class="cart-icon"></div><a href="">корзина:</a><span>0</span>
-          </div><a class="order" href="">оформить заказ</a>
+          <div class="bookmarks"><a class="bookmark-icon" href="">закладки:</a><span>0</span></div>
+          <div class="cart"><a class="cart-icon" href="">корзина:</a><span>0</span></div><a class="order" href="">оформить заказ</a>
         </div>
       </div>
       <div class="container">
@@ -111,7 +107,7 @@
           </header>
           <div class="goods">
             <div class="goods-item"><a href=""><img src="img/Perforator_9000.jpg" alt="Perforator_9000"></a>
-              <div class="hidden"><a href="">купить</a>
+              <div class="hidden"><a class="buy" href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 9000</h3>
@@ -119,7 +115,7 @@
               <p class="price">25500 Р.</p>
             </div>
             <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
-              <div class="hidden"><a href="">купить</a>
+              <div class="hidden"><a class="buy" href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
@@ -127,7 +123,7 @@
               <p class="price">15500 Р.</p>
             </div>
             <div class="goods-item"><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
-              <div class="hidden"><a href="">купить</a>
+              <div class="hidden"><a class="buy" href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
@@ -136,7 +132,8 @@
             </div>
             <div class="goods-item">
               <div class="flag-item"></div><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
-              <div class="hidden"><a href="">купить</a>
+              <div class="hidden">
+                <div class="flag-item"></div><a class="buy" href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
@@ -213,7 +210,7 @@
             <div class="contacts">
               <h2>Контакты</h2>
               <p class="text">Вы можете выбрать товар сами, заехав в наш офис:</p>
-              <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe><a class="btn" href="">Заблудились? Напишите нам!</a>
+              <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158"></iframe><a class="btn" href="">Заблудились? Напишите нам!</a>
             </div>
           </div>
         </div>
@@ -265,8 +262,8 @@
             <input type="text" name="introduce" id="introduce" placeholder="Имя Фамилия">
           </p>
           <p class="form-e-mail half-width">
-            <label for="e-mail">Ваш e-mail:</label>
-            <input type="e-mail" name="e-mail" id="e-mail" placeholder="email@example.com">
+            <label for="email">Ваш e-mail:</label>
+            <input type="email" name="email" id="email" placeholder="email@example.com">
           </p>
           <p class="form-text full-width">
             <label for="text">Текст письма:</label>
