--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           <div class="authorization">
             <div class="user-enter"><a class="enter" href="login.html" aria-label="login">Войти
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
-                  <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"></path>
-                  <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"></path>
+                  <path d="M14.875 8.5L6 0v6H0v5h6v6z"></path>
+                  <path d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"></path>
                 </svg></a><a class="registration" href="registration.html">Регистриция</a></div>
           </div>
         </div>
@@ -132,8 +132,7 @@
             </div>
             <div class="goods-item">
               <div class="flag-item"></div><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
-              <div class="hidden">
-                <div class="flag-item"></div><a class="buy" href="">купить</a>
+              <div class="hidden"><a class="buy" href="">купить</a>
                 <button type="submit">в закладки</button>
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
@@ -176,19 +175,19 @@
                 <div class="service-tab-item service-tab-delivery active">
                   <div class="text-delivery">
                     <h3>Доставка</h3>
-                    <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+                    <p>Мы с удовольствием доставим ваш товар прямо<br/>к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br/>поднимая его на ваш этаж!</p>
                   </div>
                 </div>
                 <div class="service-tab-item service-tab-guarantee">
                   <div class="text-guarantee">
                     <h3>Гарантия</h3>
-                    <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+                    <p>Если купленный у нас товар поломается или заискрит,<br/>а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br/>Дом уж восстановите как-нибудь сами.</p>
                   </div>
                 </div>
                 <div class="service-tab-item service-tab-credit">
                   <div class="text-credit">
                     <h3>Кредит</h3>
-                    <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+                    <p>Залезть в долговую яму стало проще!<br/>Кредитные консультанты придут вам на помощь.</p>
                   </div><a class="btn" href="">отправить заявку</a>
                 </div>
               </div>
