--- a/catalog.html
+++ b/catalog.html
@@ -29,24 +29,27 @@
         <div class="middle-row">
           <div class="slogan">
             <h2 class="visually-hidden">главные данные</h2>
-            <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
+            <p>Интернет-магазин строительных материалов &nbsp; и инструментов для ремонта</p>
           </div>
           <div class="address">
             <div class="phone-number">
               <div class="phone"></div><a class="number" href="tel:+78125550555">+7 (812) 555-05-55</a>
             </div>
-            <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <div class="authorization">
-            <div class="user-login"><a class="customer">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
-                  <path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"></path>
-                </svg>
-                <p class="user">Равшан Джамшутович</p></a><a class="logout" href="">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
-                  <path d="M14.875 8.5L6 0v6H0v5h6v6z"></path>
-                  <path d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"></path>
-                </svg></a></div>
+            <div class="user-login">
+              <p class="user"><a class="customer">Равшан Джамшутович</a><span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
+                    <path d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"></path>
+                  </svg></span></p><a class="logout" href="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17">
+                  <g>
+                    <path d="M21 8.5L12.125 0v6h-6v5h6v6z"></path>
+                    <path d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"></path>
+                  </g>
+                </svg></a>
+            </div>
             <ul class="personal">
               <li class="personal-item"><a class="personal-item-link" href="">Мои Заказы</a></li>
               <li class="personal-item"><a class="personal-item-link" href="">Личный кабинет</a></li>
@@ -272,7 +275,7 @@
       </div>
       <div class="footer-bottom-row">
         <div class="container">
-          <p class="footer-rights">© 2010-2017 Компания "Техномарт" Все права защищены</p>
+          <p class="footer-rights">© 2010-2017 Компания «Техномарт» Все права защищены</p>
           <section class="socials">
             <div class="social-item vk"><a href="vk.com" target="_blank" aria-label="vk"></a></div>
             <div class="social-item facebook"><a href="facebook.com" target="_blank" aria-label="facebook"></a></div>
