--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <input type="text" id="search" placeholder="Поиск:">
               <label class="search-icon" for="search">
                 <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
-                  <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"></path>
+                  <path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"></path>
                 </svg>
               </label>
             </form>
@@ -29,13 +29,13 @@
         <div class="middle-row">
           <div class="slogan">
             <h2 class="visually-hidden">главные данные</h2>
-            <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
+            <p>Интернет-магазин строительных материалов &nbsp; и инструментов для ремонта</p>
           </div>
           <div class="address">
             <div class="phone-number">
               <div class="phone"></div><a class="number" href="tel:+78125550555">+7 (812) 555-05-55</a>
             </div>
-            <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <div class="authorization">
             <div class="user-enter"><a class="enter" href="login.html" aria-label="login">Войти
@@ -62,6 +62,7 @@
       <section class="categories">
         <div class="container">
           <div class="left-column">
+            <div class="flag-item"></div>
             <div class="categories-item material">
               <h3>материалы</h3><a class="btn" href="">на любой вкус</a>
             </div>
@@ -197,7 +198,7 @@
         <div class="about">
           <div class="container">
             <div class="company">
-              <h2>Компания "Техномарт"</h2>
+              <h2>Компания «Техномарт»</h2>
               <p class="text">Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах.</p>
               <p class="text">Мы можемдоставить ваш товар в самые отдельные точки России! Техномарт работает со многими ранспортными компаниями:</p>
               <ul class="partners">
@@ -230,7 +231,7 @@
       </div>
       <div class="footer-middle-row">
         <div class="container">
-          <p class="footer-address">г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8<a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+          <p class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
           <ul class="footer-category">
             <li class="footer-category-item"><a href="">Материалы</a></li>
             <li class="footer-category-item"><a href="">Техника</a></li>
@@ -241,7 +242,7 @@
       </div>
       <div class="footer-bottom-row">
         <div class="container">
-          <p class="footer-rights">© 2010-2017 Компания "Техномарт" Все права защищены</p>
+          <p class="footer-rights">© 2010-2017 Компания «Техномарт» Все права защищены</p>
           <section class="socials">
             <div class="social-item vk"><a href="vk.com" target="_blank" aria-label="vk"></a></div>
             <div class="social-item facebook"><a href="facebook.com" target="_blank" aria-label="facebook"></a></div>
