--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style-min.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="main-header">
@@ -163,8 +163,8 @@
                     <div class="price-progress">
                       <div class="price-progress-selected"></div>
                     </div>
-                    <div class="price-bulit-min"></div>
-                    <div class="price-bulit-max"></div>
+                    <div class="price-min"></div>
+                    <div class="price-max"></div>
                   </div>
                 </div>
                 <div class="filter-price-values">
@@ -669,8 +669,7 @@
       </div>
       <div class="footer-bottom container">
         <p class="copyright">
-          &copy; 2010–2019 Компания «Техномарт»<br />
-          Все права защищены
+          &copy; 2010–2019 Компания «Техномарт» Все права защищены
         </p>
         <ul class="social-links-list">
           <li>
